src/objects/JIRA_Project__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Head_Count__c</fullName>
        <label>Actual Head Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Android_OS_POR__c</fullName>
        <description>For use on D. Schuster&apos;s POR Experience reports; visible to Dave and team only</description>
        <inlineHelpText>For use on D. Schuster&apos;s POR Experience reports; visible to Dave and team only</inlineHelpText>
        <label>Android OS</label>
        <picklist>
            <picklistValues>
                <fullName>5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Rel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Behind_Reason__c</fullName>
        <label>Behind Reason</label>
        <picklist>
            <picklistValues>
                <fullName>SoC Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Bugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CXD_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CXD Lead</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>SW_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Feature_Notice1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Experience/Feature Notice1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Feature Name1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name2__c</fullName>
        <description>Field for Privacy Team</description>
        <label>Feature Name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name3__c</fullName>
        <description>Field for Privacy Team</description>
        <label>Feature Name3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Feature Revision Comments1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments2__c</fullName>
        <description>For Privacy Team</description>
        <label>Feature Revision Comments2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments3__c</fullName>
        <description>For Privacy Team</description>
        <label>Feature Revision Comments3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Community__c</fullName>
        <label>Google+ Community</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Group__c</fullName>
        <inlineHelpText>Please enter the related Google Group</inlineHelpText>
        <label>Google Group</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hardware_Enablers__c</fullName>
        <description>Specific field for use by D. Schuster, in POR chart</description>
        <inlineHelpText>Specific field for use by D. Schuster, in POR chart</inlineHelpText>
        <label>Hardware Enablers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_Count_Delta__c</fullName>
        <formula>Projected_Head_Count__c - Actual_Head_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head Count Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JIRA_Project_ID__c</fullName>
        <formula>LEFT(Id,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please USE THIS ID when entering the Salesforce Project in JIRA</inlineHelpText>
        <label>SFDC Feature ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>JIRA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Jira URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL2__c</fullName>
        <description>Privacy Team</description>
        <label>Jira URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL3__c</fullName>
        <description>Privacy Team</description>
        <label>Jira URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LE_Date_Range__c</fullName>
        <formula>Oldest_LE_Date__c -  LE_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LE Date Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_Date__c</fullName>
        <label>Earliest LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for data migration exercise Jun 2015; admin-view only</description>
        <inlineHelpText>used for data migration exercise Jun 2015; admin-view only</inlineHelpText>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modem_Dependency__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>Modem Dependency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Features__c</fullName>
        <label>Number of Features</label>
        <summaryForeignKey>JIRA_Feature__c.JIRA_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Post_Loads__c</fullName>
        <label>Number of Post Loads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Preloads__c</fullName>
        <label>Number of Preloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oldest_LE_Date__c</fullName>
        <label>Oldest LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oldest_SA_Date__c</fullName>
        <label>Oldest SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oldest_TA_Date__c</fullName>
        <label>Oldest TA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>Will be auto-filled by system, based on Status</inlineHelpText>
        <label>PDD Completed Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date2__c</fullName>
        <description>For Privacy Team</description>
        <label>PDD Completed Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date3__c</fullName>
        <description>For Privacy Team</description>
        <label>PDD Completed Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Facilitator1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>PDD Facilitator1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (PDD Facilitator)</relationshipLabel>
        <relationshipName>SW_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDD_Requested_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Requested Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_Status2__c</fullName>
        <description>Privacy Team</description>
        <label>PDD Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_Status3__c</fullName>
        <description>Privacy Team</description>
        <label>PDD Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_URL2__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_URL3__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_Update_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Update Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Leader</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (PM Leader)</relationshipLabel>
        <relationshipName>SW_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POR_Grouping__c</fullName>
        <description>Used for Dave Schuster&apos;s POR Experiences chart; will be filled in by Dave</description>
        <inlineHelpText>Used for Dave Schuster&apos;s POR Experiences chart; will be filled in by Dave</inlineHelpText>
        <label>POR Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR_Status__c</fullName>
        <inlineHelpText>In, Out, Discovery, Beta, or Exclude From Chart</inlineHelpText>
        <label>POR Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude from POR Chart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for data migration exercise Jun 2015; admin-view only</description>
        <inlineHelpText>used for data migration exercise Jun 2015; admin-view only</inlineHelpText>
        <label>Parent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Eng Review Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Eng Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status2__c</fullName>
        <label>Privacy Eng Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status3__c</fullName>
        <label>Privacy Eng Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Engineer1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Engineer)</relationshipLabel>
        <relationshipName>SW_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team field</description>
        <label>Privacy Engineer2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Engineer2)</relationshipLabel>
        <relationshipName>SW_Projects6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Privacy Team</description>
        <label>Privacy Engineer3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Engineer3)</relationshipLabel>
        <relationshipName>SW_Projects8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Counsel1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Counsel)</relationshipLabel>
        <relationshipName>SW_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Privacy Legal Counsel2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Legal Counsel2)</relationshipLabel>
        <relationshipName>SW_Projects5nu2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Privacy Legal Counsel3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Privacy Legal Counsel3)</relationshipLabel>
        <relationshipName>SW_Projects5nuC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments2__c</fullName>
        <label>Privacy Legal Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments3__c</fullName>
        <label>Privacy Legal Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status2__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status3__c</fullName>
        <label>Privacy Legal Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL2__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL3__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Risk_Level1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>L0 = Highly Critical
L1 = Critical
L2 = High
L3 = Medium
L4 = Low
L5 = Legal and Compliance Trivial</inlineHelpText>
        <label>Privacy Legal Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>L0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments2__c</fullName>
        <description>For Privacy Team</description>
        <label>Privacy Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments3__c</fullName>
        <description>For Privacy Team</description>
        <label>Privacy Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Report_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Review Report URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>P0 = Critical/Code Review
P1 = Critical
P2 = High
P3 = Medium
P4 = Low
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level2__c</fullName>
        <description>For Privacy Team</description>
        <inlineHelpText>P0 = Critical/Code Review 
P1 = Critical 
P2 = High 
P3 = Medium 
P4 = Low 
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level2</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level3__c</fullName>
        <description>For Privacy Team</description>
        <inlineHelpText>P0 = Critical/Code Review 
P1 = Critical 
P2 = High 
P3 = Medium 
P4 = Low 
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level3</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core + Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mind Reader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>JIRA_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JIRA_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Head_Count__c</fullName>
        <label>Projected Head Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Spend__c</fullName>
        <label>Projected Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>